--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Alefize",
-  "description": "Switch all fonts to Alef.",
+  "name": "Alefize Wikipedia",
+  "description": "Switch all fonts on Wikipedia to Alef.",
   "version": "1.0",
 
   "permissions": [
@@ -8,7 +8,7 @@
   ],
 
   "content_scripts": [{
-    "matches": ["http://*/*"],
+    "matches": ["*://*.wikipedia.org/*"],
     "css": ["alef.css"]
   }],
 
